# arcus-toolset

./: LICENSE  README.md  arcus-toolset.py  ats.py  get-details.sh  pyproject.toml  whois-microsoft.txt
arcus-toolset/: __version__.py  whois.py
