[tool.poetry]
name = "arcus-toolset"
version = "0.1.0"
description = ""
authors = ["Justin G. Mitchell <jgmitchell@gmail.com>"]
license = "bsd-2-clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
